--- a/blogs.html
+++ b/blogs.html
@@ -37,21 +37,21 @@
                 lg:aspect-[1440/140]
             " data-menu="full-menu">
                 <div class="w-[30%] flex items-end justify-end">
-                    <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active">
+                    <a class="h-6 leading-6 uppercase mr-[20%] text-active border-b-[3px] hover:cursor-pointer border-active" href="/">
                         Trang Chủ
                     </a>
-                    <a
+                    <a  href="/products.html"
                         class="h-6 leading-6 uppercase mr-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Sản phẩm
                     </a>
                 </div>
                 <img src="./img//logo.png" class="h-full">
                 <div class="w-[30%] flex">
-                    <a
+                    <a  href="/introduction.html"
                         class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Giới thiệu
                     </a>
-                    <a
+                    <a  href="/contact.html"
                         class="h-6 leading-6 uppercase ml-[20%] text-white hover:text-active hover:border-b-2 hover:cursor-pointer border-active">
                         Liên hệ
                     </a>
@@ -104,24 +104,29 @@
     <section class="relative bg-lavale w-full h-fit overflow-hidden z-1">
         <div class="w-full bg-transparent z-9">
             <div class="
-                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
+                flex flex-col w-[91.5%] mx-auto my-[88px] items-center align-center justify-center z-10
+                md:w-[92.3%]
+                lg:w-[88.89%]
             ">
                 <img src="./img/advice.png" class="
-                    w-[81%] mb-4
+                    w-[81%] mb-[16px]
                     md:w-[32%]
                 ">
-                <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Công dụng của rượu cau chữa viêm lợi</h1>
-                <span class="block w-full text-xl text-center text-white/60 font-medium font-monsterrat mb-12 ">
+                <h1 class="w-full text-center text-[48px] leading-[64px] text-white font-display font-semibold capitalize mb-[16px]">Công dụng của rượu cau chữa viêm lợi</h1>
+                <span class="block w-full text-[20px] leading-[32px] text-center text-white/60 font-medium font-monsterrat mb-[56px]">
                     29.12.1964
                 </span>
+
                 <div class="w-full">
                     <p class="
-                        block px-[17%] text-left font-monsterrat font-[15px] leading-[24px] text-white
+                        block text-left font-monsterrat font-[15px] leading-[24px] text-white mb-[32px]
+                        lg:px-[17%]
                     ">
                         Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
                     </p>
                     <div class="
-                        relative w-full aspect-[311/480] flex items-center justify-center align-center bg-[url('./img/timeline1.jfif')] rounded-md bg-no-repeat bg-center bg-cover
+                        relative w-full aspect-[311/480] flex items-center justify-center align-center mb-[32px]
+                        bg-[url('./img/timeline1.jfif')] rounded-md bg-no-repeat bg-center bg-cover
                         md:aspect-[770/480]
                         lg:aspect-[1280/480]
                     ">
@@ -131,85 +136,87 @@
                         <img src="./img/spliter.png" class="w-full aspect-[333/24] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
                     </div>
                     <p class="
-                        block px-[17%] text-left font-monsterrat font-[15px] leading-[24px] text-white
+                        block text-left font-monsterrat font-[15px] leading-[24px] text-white mb-[32px]
+                        lg:px-[17%]
                     ">
                         Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
                     </p>
                     <p class="
-                        block px-[17%] text-left font-monsterrat font-[15px] leading-[24px] text-white
+                        block text-left font-monsterrat font-[15px] leading-[24px] text-white mb-[56px]
+                        lg:px-[17%]
                     ">
                         Chúng tôi luôn lựa chọn những nguyên liệu đắt nhất, tốt nhất của đất nước để tạo ra chất rượu của mình. Quan trọng nhất là nguồn nước chúng tôi lấy từ nguồn nước đá ong, với lõi lọc tự nhiên là lớp đá ong hàng ngàn lớp chảy qua thời gian sẽ cho nguồn nước tinh khiết nhất. Kiểm nghiệm nguồn nước của chúng tôi cho tỉ lệ tinh khiết gấp 6 lần ngưỡng nước uống thông thường. Cốt rượu được nấu thêm với men thuốc bắc 36 vị thuốc, gạo nếp Điện Biên loại 1. Rượu sau khi chưng cất sẽ chạy qua máy khử độc tố loại bỏ adehyde, methanol... và ngâm trong chum tối thiểu 1 năm
                     </p>
+                </div>
+
+                <div class="
+                    relative w-full aspect-[375/72] bg-lavale mb-[56px]
+                    flex justify-center align-center items-center
+                    border-0 p-0
+                    md:aspect-[834/72]
+                    lg:aspect-[1440/72]
+                ">
+                    <img src="img/spliter-diamond.svg">
+                </div>
+        
+                <div class="w-full bg-transparent z-9">
+                    <div class="
+                        flex flex-col w-full mx-auto items-center align-center justify-center p-0 z-10
+                        lg:px-[9%]
+                    ">
+                        <h1 class="w-full text-center text-[36px] leading-[48px] text-white font-display mb-[32px] capitalize">Những bài viết khác</h1>
+                        <div class="flex flex-col w-full justify-between items-center align-center space-y-4">
+                            <div class="
+                                grid grid-cols-1 grid-rows-1 gap-3 w-full justify-between items-center align-center z-10
+                                md:grid-cols-2 md:grid-rows-1
+                            ">
+                                <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
+                                    <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-[-1px] left-0"/>
+                                    <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-[-1px]"/>
+                                    <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
+                                    <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
+                                    <span class="
+                                        block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8 pt-12
+                                        lg:pt-0
+                                    ">
+                                        Bài thuốc ngâm rượu chữa yếu sinh lý hiệu quả
+                                    </span>
+                                    <span class="
+                                        flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
+                                        lg:pb-0
+                                    ">
+                                        Xem chi tiết
+                                        <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
+                                    </span>
+                                </div>
+                                <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
+                                    <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-[-1px] left-0"/>
+                                    <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-[-1px]"/>
+                                    <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
+                                    <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
+                                    <span class="
+                                        block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8 pt-12
+                                        lg:pt-0
+                                    ">
+                                        Cách ngâm rượu gừng nghệ hạ thổ
+                                    </span>
+                                    <span class="
+                                        flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
+                                        lg:pb-0
+                                    ">
+                                        Xem chi tiết
+                                        <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         
     </section>
 
-
-    <div class="
-        relative w-full aspect-[375/72] bg-lavale
-        flex justify-center align-center items-center
-        border-0 p-0
-        md:aspect-[834/72]
-        lg:aspect-[1440/72]
-    ">
-        <img src="img/spliter-diamond.svg">
-    </div>
-
-    <div class="w-full bg-transparent z-9">
-        <div class="
-            flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
-            md:px-[9%] md:py-[7%] md:my-0
-        ">
-            <h1 class="w-full text-center text-5xl text-white font-display mb-12 capitalize">Những bài viết khác</h1>
-            <div class="flex flex-col w-full justify-between items-center align-center space-y-4">
-                <div class="
-                    grid grid-cols-1 grid-rows-1 gap-3 w-full justify-between items-center align-center z-10
-                    md:grid-cols-2 md:grid-rows-1
-                ">
-                    <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
-                        <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-[-1px] left-0"/>
-                        <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-[-1px]"/>
-                        <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
-                        <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
-                        <span class="
-                            block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8 pt-12
-                            lg:pt-0
-                        ">
-                            Bài thuốc ngâm rượu chữa yếu sinh lý hiệu quả
-                        </span>
-                        <span class="
-                            flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
-                            lg:pb-0
-                        ">
-                            Xem chi tiết
-                            <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
-                        </span>
-                    </div>
-                    <div class="relative flex flex-col justify-center aspect-[523/192] bg-lavalelight/30 rounded-md">
-                        <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] top-[-1px] left-0"/>
-                        <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] top-0 left-[-1px]"/>
-                        <img src="./img/spliter-vertical.png" class="h-full aspect-[16/192] absolute scale-y-[-1] rotate-180 top-0 right-[-1px]" />
-                        <img src="./img/spliter.png" class="w-full aspect-[523/16] absolute scale-x-[-1] rotate-180 bottom-[-1px] left-0"/>
-                        <span class="
-                            block text-left font-medium font-monsterrat text-lg text-white px-12 mb-8 pt-12
-                            lg:pt-0
-                        ">
-                            Cách ngâm rượu gừng nghệ hạ thổ
-                        </span>
-                        <span class="
-                            flex flex-row items-center inline-block text-left text-base font-semibold font-monsterrat uppercase text-white px-12 pb-12
-                            lg:pb-0
-                        ">
-                            Xem chi tiết
-                            <svg class="h-6 w-6 text-white ml-4"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <line x1="5" y1="12" x2="19" y2="12" />  <line x1="13" y1="18" x2="19" y2="12" />  <line x1="13" y1="6" x2="19" y2="12" /></svg>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <footer class="
         relative flex flex-col bg-lavaledark w-full z-20 overflow-hidden aspect-[375/424]
