--- a/contact.html
+++ b/contact.html
@@ -129,18 +129,38 @@
 
     <section class="relative bg-lavale w-full h-fit overflow-hidden z-1">
 
-        <div class="w-full bg-transparent z-9 lg:aspect-[1440/416] flex justify-center align-center items-center">
+        <div class="w-full bg-transparent z-9 flex justify-center align-center items-center">
             <div class="
-                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 z-10
-                lg:flex-row lg:aspect-[1280/240]
+                flex flex-col w-[91.5%] mx-auto my-[88px] align-center justify-between gap-[32px] z-10
+                md:w-[92.3%] md:flex-row
+                lg:w-[88.89%]
             ">
-                <div class="w-[33.33%] h-full">
-                    <h1 class="capitalize">Điện Thoại</h1>
-                    <span class="block">Tư vấn và đặt hàng <br> Thứ 2 đến thứ 7, 8:00 đến 17:00</span>
-                    <span class="block">0972897891</span>
+                <div class="flex-1">
+                    <h1 class="
+                        capitalize font-display font-semibold text-[36px] leading-[64px] text-white mb-[24px]
+                        lg:text-[48px]
+                    ">Điện Thoại</h1>
+                    <span class="block font-monsterrat font-semibold text-[15px] leading-[24px] text-white mb-[8px]">Tư vấn và đặt hàng <br> Thứ 2 đến thứ 7, 8:00 đến 17:00</span>
+                    <span class="block font-monsterrat text-[15px] leading-[24px] text-[#feefc0]">0972897891</span>
                 </div>
-                <div class="w-[33.33%]"></div>
-                <div class="w-[33.33%]"></div>
+                <div class="flex-1">
+                    <h1 class="
+                        capitalize font-display font-semibold text-[36px] leading-[64px] text-white mb-[24px]
+                        lg:text-[48px]
+                    ">Email</h1>
+                    <span class="block font-monsterrat font-semibold text-[15px] leading-[24px] text-white mb-[8px]">Hỗ trợ, tư vấn và đặt hàng online</span>
+                    <span class="block font-monsterrat text-[15px] leading-[24px] text-[#feefc0]">cskh@lavale.vn</span>
+                </div>
+                <div class="flex-1">
+                    <h1 class="
+                        capitalize font-display font-semibold text-[36px] leading-[64px] text-white mb-[24px]
+                        lg:text-[48px]
+                    ">Địa chỉ</h1>
+                    <span class="block font-monsterrat font-semibold text-[15px] leading-[24px] text-white mb-[8px]">Khu vực miền Bắc</span>
+                    <span class="block font-monsterrat text-[15px] leading-[24px] text-[#feefc0] mb-[24px]">18 ngõ 35 Cát Linh, Đống Đa, Hà Nội</span>
+                    <span class="block font-monsterrat font-semibold text-[15px] leading-[24px] text-white mb-[8px]">Khu vực miền Nam</span>
+                    <span class="block font-monsterrat text-[15px] leading-[24px] text-[#feefc0]">16/11 đường số 18, phường 8, <br> Gò Vấp, Hồ Chí Minh</span>
+                </div>
             </div>
         </div>
 
@@ -154,33 +174,39 @@
             ">
             </div>
             <div class="
-                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
-                md:my-[88px]
-                lg:aspect-[1280/480]
+                flex flex-col w-[91.5%] mx-auto my-[88px] items-center align-center justify-center z-10
+                md:w-[92.3%] md:flex-row
+                lg:w-[88.89%]
             ">
                 <div class="
-                    flex flex-col align-center
-                    lg:h-full lg:aspect-[843/480]
+                    flex flex-col align-center w-full mx-auto
+                    lg:w-[66%]
                 ">
-                    <h1 class="w-full text-center text-5xl text-white font-display mb-[24px] capitalize">Để lại lời nhắn</h1>
-                    <div class="w-full aspect-[843/392] mb-[24px]">
-                        <div class="w-full container flex flex-row justify-between gap-6">
-                            <div class="flex-1 flex flex-col">
-                                <span class="block">Địa chỉ Email</span>
+                    <h1 class="
+                        w-full text-center text-[36px] text-white font-display mb-[24px] capitalize
+                        lg:text-[48px]
+                    ">Để lại lời nhắn</h1>
+                    <div class="w-full mb-[24px]">
+                        <div class="
+                            w-full flex flex-col justify-between gap-[16px] mb-[16px]
+                            lg:flex-row
+                        ">
+                            <div class="flex-1 flex flex-col w-full">
+                                <span class="block mb-[8px] font-monsterrat font-medium text-[14px] leading-[20px] text-white">Địa chỉ Email</span>
                                 <input placeholder="Thông tin liên lạc của quý khách" class="
                                     w-full bg-lavale/10 text-white border-[3px] border-white/30
-                                    mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                    w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
                                     hover:bg-white/10 hover:border-[#feefc0]
                                     focus:bg-white/10 focus:border-[#feefc0]
                                     text-lg
                                     placeholder-white
                                 ">
                             </div>
-                            <div class="flex-1 flex flex-col">
-                                <span class="block">Họ và Tên</span>
+                            <div class="flex-1 flex flex-col w-full">
+                                <span class="block mb-[8px] font-monsterrat font-medium text-[14px] leading-[20px] text-white">Họ và Tên</span>
                                 <input placeholder="Danh xưng của quý khách" class="
                                     w-full bg-lavale/10 text-white border-[3px] border-white/30
-                                    mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                    w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
                                     hover:bg-white/10 hover:border-[#feefc0]
                                     focus:bg-white/10 focus:border-[#feefc0]
                                     text-lg
@@ -188,11 +214,11 @@
                                 ">
                             </div>
                         </div>
-                        <div class="w-full">
-                            <span class="block">Tiêu đề</span>
+                        <div class="w-full mb-[16px]">
+                            <span class="block mb-[8px] font-monsterrat font-medium text-[14px] leading-[20px] text-white">Tiêu đề</span>
                             <input placeholder="Vấn đề cần liên hệ" class="
                                 w-full bg-lavale/10 text-white border-[3px] border-white/30
-                                mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
                                 hover:bg-white/10 hover:border-[#feefc0]
                                 focus:bg-white/10 focus:border-[#feefc0] 
                                 text-lg
@@ -200,10 +226,10 @@
                             ">
                         </div>
                         <div class="w-full">
-                            <span class="block">Tiêu đề</span>
+                            <span class="block mb-[8px] font-monsterrat font-medium text-[14px] leading-[20px] text-white">Tiêu đề</span>
                             <textarea placeholder="Vấn đề cần liên hệ" class="
                                 w-full bg-lavale/10 text-white border-[3px] border-white/30
-                                mt-8 w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
+                                w-fit py-3 px-9 rounded-md leading-8 font-monsterrat font-extrabold 
                                 hover:bg-white/10 hover:border-[#feefc0]
                                 focus:bg-white/10 focus:border-[#feefc0]
                                 text-lg
@@ -212,7 +238,7 @@
                         </div>
                     </div>
                     <button class="
-                        w-full transparent text-white border-[3px] mt-8 w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg
+                        w-full transparent text-white border-[3px] w-fit py-3 px-9 uppercase rounded-md leading-8 font-monsterrat font-extrabold hover:bg-white/50 text-lg
                     ">
                         Gửi lời nhắn
                     </button>
@@ -231,20 +257,27 @@
 
         <div class="relative w-full bg-lavale z-9">
             <div class="
-                flex flex-col w-[88.89%] mx-auto items-center align-center justify-center p-0 my-24 z-10
-                md:my-[88px]
-                lg:aspect-[1280/480]
+                flex flex-col w-[91.5%] mx-auto my-[88px] items-center align-center justify-center z-10
+                md:w-[92.3%]
+                lg:w-[88.89%] lg:aspect-[1280/480]
             ">
-                <h1 class="w-full text-center text-5xl text-white font-display mb-4 capitalize">Theo dõi Lavale</h1>
-                <div class="w-full flex flex-row align-center items-center justify-center">
-                    <img src="./img/facebook.svg">
+                <h1 class="
+                    w-full text-center text-[36px] text-white font-display mb-[32px] capitalize
+                    lg:text-[48px]
+                ">Theo dõi Lavale</h1>
+                <div class="w-full flex flex-row align-center items-center justify-center mb-[32px]">
+                    <img src="./img/facebook.svg" class="mr-[24px]">
                     <img src="./img/instagram.svg">
                 </div>
-                <div class="w-full aspect-[1280/320] container flex flex-row justify-between gap-4">
-                    <div class="h-full aspect-[308/320]"></div>
-                    <div class="h-full aspect-[308/320]"></div>
-                    <div class="h-full aspect-[308/320]"></div>
-                    <div class="h-full aspect-[308/320]"></div>
+                <div class="w-full aspect-[1280/320] flex flex-col justify-between gap-[16px] lg:flex-row">
+                    <div class="flex-1 flex flex-row justify-between gap-[16px]">
+                        <div class="flex-1 aspect-[308/320] rounded-md bg-[url('./img/follow1.jfif')] bg-cover bg-no-repeat bg-center"></div>
+                        <div class="flex-1 aspect-[308/320] rounded-md bg-[url('./img/follow2.png')] bg-cover bg-no-repeat bg-center"></div>
+                    </div>
+                    <div class="flex-1 flex flex-row justify-between gap-[16px]">
+                        <div class="flex-1 aspect-[308/320] rounded-md bg-[url('./img/follow3.jfif')] bg-cover bg-no-repeat bg-center"></div>
+                        <div class="flex-1 aspect-[308/320] rounded-md bg-[url('./img/follow4.jfif')] bg-cover bg-no-repeat bg-center"></div>
+                    </div>
                 </div>
             </div>
         </div>
